killersh/21_d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: neptune-10ab
  name: neptune-10ab
  namespace: neptune
spec:
  replicas: 3
  selector:
    matchLabels:
      app: neptune-10ab
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: neptune-10ab
    spec:
      serviceAccount: neptune-sa-v2
      containers:
      - image: httpd:2.4-alpine
        name: neptune-sa-v2
        resources:
          requests:
            memory: "20Mi"
          limits:
            memory: "50Mi"
status: {}
