killersh/6_p.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod6
spec:
  containers:
  - name: pod6
    image: busybox:1.31.0
    command: ["touch /tmp/ready && sleep 1d"]
    readinessProbe:
      exec:
        command:
        - sh
        - c
        - cat /tmp/ready
      initialDelaySeconds: 5
      periodSeconds: 10
