killersh/19_nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mars
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
