killersh/20_network_policy.yaml
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: backend-egress-policy
#  namespace: pluton
#spec:
#  podSelector:
#    matchLabels:
#      app: backend
#  egress:
#  - {}
#  policyTypes:
#  - Egress
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: frontend-egress-policy
#  namespace: pluton
#spec:
#  podSelector:
#    matchLabels:
#      app: frontend
#  egress:
#  - to:
#    - namespaceSelector:
#        matchLabels:
#          kubernetes.io/metadata.name: pluton
#      podSelector:
#        matchLabels:
#          app: backend  
#  policyTypes:
#  - Egress
#---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-egress-policy
  namespace: pluton
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
