killersh/20_npd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: np
spec:
  podSelector: {}
  policyTypes:
  - Egress
